--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: node_js
 node_js:
   - "0.11"
   - "0.10"
+  - "0.12"
+  - "iojs"
 services:
   - redis-server
 script: "npm test && ./node_modules/.bin/mocha -R spec spec/integration"
