--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "devDependencies": {
     "babel-cli": "^6.4.5",
     "babel-eslint": "^6.0.0",
+    "transform-es2015-spread": "^6.6.5",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
     "babel-register": "^6.5.2",
