--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
-  "extends": "airbnb/base",
+  "extends": "airbnb-base",
   "parser": "babel-eslint",
   "rules": {
-    "no-param-reassign": [2, {"props": false}]
+    "no-param-reassign": [2, {"props": false}],
+    "no-underscore-dangle": 0
   },
   "globals": {
     "describe": 0
