use mocha 2.x for testing

--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "expect.js": "*",
     "fakeredis": "*",
-    "mocha": "*",
+    "mocha": "2",
     "redis": "*",
     "rewire": "*"
   },
