--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   },
   "dependencies": {
     "bluebird": "~2.9.30",
-    "node-uuid": "~1.4.3",
-    "redis-evalsha": "~1.1.1"
+    "redis-evalsha": "~1.1.1",
+    "uuid": "^3.0.0"
   },
   "devDependencies": {
     "expect.js": "*",
