--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ioredis-lock",
-  "version": "3.0.0",
+  "version": "3.1.0",
   "description": "Node distributed locking using redis with ioredis adapter",
   "keywords": [
     "lock",
@@ -25,26 +25,26 @@
     "url": "https://github.com/makeomatic/ioredis-lock.git"
   },
   "dependencies": {
-    "bluebird": "^3.4.1",
-    "lodash.defaults": "^4.1.0",
-    "lodash.foreach": "^4.4.1",
-    "node-uuid": "^1.4.3"
+    "bluebird": "^3.4.6",
+    "lodash.defaults": "^4.2.0",
+    "lodash.foreach": "^4.5.0",
+    "uuid": "^3.0.0"
   },
   "peerDependencies": {
     "ioredis": "~2.x.x"
   },
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-eslint": "^6.1.2",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.3.13",
-    "babel-register": "^6.11.6",
-    "eslint": "^3.2.2",
-    "eslint-config-airbnb-base": "^5.0.0",
-    "eslint-plugin-import": "^1.12.0",
+    "babel-cli": "^6.18.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "eslint": "^3.10.2",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "expect.js": "*",
-    "ioredis": "^2.2.0",
-    "mocha": "^3.0.1"
+    "ioredis": "^2.4.0",
+    "mocha": "^3.2.0"
   },
   "scripts": {
     "test": "mocha -r babel-register -R spec spec spec/integration",
