--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "redislock",
+  "name": "@rustyconover/redislock",
   "version": "1.2.1",
   "description": "Node distributed locking using redis",
   "keywords": [
