--- a/.eslintrc
+++ b/.eslintrc
@@ -3,7 +3,14 @@
   "parser": "babel-eslint",
   "rules": {
     "no-param-reassign": [2, {"props": false}],
-    "no-underscore-dangle": 0
+    "no-underscore-dangle": 0,
+    "comma-dangle": ["error", {
+      "arrays": "always-multiline",
+      "objects": "always-multiline",
+      "imports": "never",
+      "exports": "never",
+      "functions": "never",
+    }]
   },
   "globals": {
     "describe": 0
