--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ioredis-lock",
-  "version": "3.3.1",
+  "version": "4.0.0",
   "description": "Node distributed locking using redis with ioredis adapter",
   "keywords": [
     "lock",
@@ -15,7 +15,7 @@
   ],
   "author": "Daniel St. Jules <danielst.jules@gmail.com>",
   "contributors": [
-    "Vitaly Aminev <v@makeomatic.ru>",
+    "Vitaly Aminev <v@makeomatic.ca>",
     "Bernhard Weisshuhn <bkw@codingforce.com>"
   ],
   "license": "MIT",
@@ -26,31 +26,30 @@
     "url": "https://github.com/makeomatic/ioredis-lock.git"
   },
   "dependencies": {
-    "bluebird": "^3.4.6",
+    "bluebird": "^3.5.0",
     "lodash.defaults": "^4.2.0",
     "lodash.foreach": "^4.5.0",
     "uuid": "^3.0.0"
   },
   "peerDependencies": {
-    "ioredis": "~2.x.x"
+    "ioredis": "~2.x.x || ~3.x.x"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.0",
-    "babel-eslint": "^7.1.1",
-    "babel-plugin-transform-class-properties": "^6.22.0",
-    "babel-plugin-transform-es2015-destructuring": "^6.22.0",
-    "babel-plugin-transform-es2015-parameters": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.22.0",
-    "babel-plugin-transform-strict-mode": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "babel-register": "^6.22.0",
-    "eslint": "^3.10.2",
-    "eslint-config-airbnb-base": "^11.1.0",
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-strict-mode": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "eslint": "^3.19.0",
+    "eslint-config-makeomatic": "^1.0.1",
     "eslint-plugin-import": "^2.2.0",
     "expect.js": "*",
-    "ioredis": "^2.4.0",
-    "mocha": "^3.2.0"
+    "ioredis": "^3.0.0",
+    "mocha": "^3.4.1"
+  },
+  "engine": {
+    "node": ">= 7.6.0"
   },
   "scripts": {
     "lint": "eslint ./src",
