--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,3 @@
 {
-  "extends": "airbnb-base",
-  "parser": "babel-eslint",
-  "rules": {
-    "no-param-reassign": [2, {"props": false}],
-    "no-underscore-dangle": 0,
-    "comma-dangle": ["error", {
-      "arrays": "always-multiline",
-      "objects": "always-multiline",
-      "imports": "never",
-      "exports": "never",
-      "functions": "never",
-    }]
-  },
-  "globals": {
-    "describe": 0
-  }
+  "extends": "makeomatic"
 }
