--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "^3.19.0",
     "eslint-config-makeomatic": "^1.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-promise": "^3.5.0",
     "expect.js": "*",
     "ioredis": "^3.0.0",
     "mocha": "^3.4.1"
