--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,5 @@
 {
   "plugins": [
-    "transform-strict-mode",
-    "transform-object-rest-spread",
-    "transform-class-properties"
+    "transform-strict-mode"
   ]
 }
