--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "fakeredis": "*",
     "mocha": "2",
     "redis": "*",
-    "rewire": "*"
+    "proxyquire": "^2.1.3"
   },
   "scripts": {
     "test": "mocha -R spec spec"
